@@ -3,6 +3,7 @@ package it.iol.ws.model;
 import io.vavr.collection.Seq;
 import lombok.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -12,17 +13,18 @@ import java.util.List;
  */
 @ToString
 @Getter
+@Setter
 @EqualsAndHashCode
 final public class ErrorBean {
 
-    @With
     private List<String> errors;
 
     private ErrorBean() {
     }
 
     public ErrorBean(@NonNull String err) {
-        errors = List.of(err);
+        //errors = List.of(err);  java 11
+        errors = Arrays.asList(err);
     }
 
     public ErrorBean(@NonNull List<String> errors) {
